2002-12-02  Derek Atkins  <derek@ihtfp.com>

	* src/register/ledger-core/split-register-model-save.c -- fix a bug
	  updating two-split multi-currency transactions from the basic ledger.

2002-12-02  Chris Lyttle  <chris@wilddev.net>
	
	* src/doc/Makefile.am: fix for failure when building rpm

2002-12-02  Chris Lyttle  <chris@wilddev.net>

	* NEWS: update to new version 1.7.4
	* configure.in: update to new version 1.7.4
	
2002-12-01  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome-utils/gnc-account-sel.c
	(gnc_account_sel_set_new_account_ability): Change the
	gnc-account-sel's "New..." account button to expand but not fill
	it's allocation.

	* src/gnome/druid-loan.c (ld_pay_prep, ld_pay_save_current): Add
	the ability to independently specify the source/from account of a
	payment; fixes Bug#99467.
	(ld_pay_prep, ld_pay_save_current): Add some insensitive widgets
	to show the escrow account; fixes Bug#99476.

	* src/gnome/druid-loan.c (ld_calc_upd_rem_payments): Get the
	currently-typed value for doing the recalculation, not what the
	gtk_spin_button reports.
	(gnc_ui_sx_loan_druid_create): Recalc the remaining months when
	the period-size OptionMenu changes.
	(ld_pay_prep): Handle better the act of setting up the payment
	page for both the Spec-FromAcct and Through-Escrow options.

2002-12-02  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/window-main.c,
	src/business/business-gnome/business-gnome.scm, src/scm/main.scm:
	Yet more i18n menu insertion fixes.

	* src/gnome-utils/gnc-menu-extensions.[hc]: Added
	gnc_gnome_app_insert_menus to work around i18n problems with stock
	gnome menus. This is now also used from window-acct-tree.c. 

2002-12-01  Derek Atkins <derek@ihtfp.com>

	* move QuickFill and dialog-transfer into gnome-utils

	* business-ledger/gncEntryLedger.c -- delay setting *new = FALSE until
	  just before we call the "new account" dialog.	  

	* src/gnome-utils/dialog-transfer -- update the dialog to enable